# SiegeDB-Client

./: .clang-format  .env.example  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/http/: http.hh
include/siegedb/: api.hh  siegedb.hh
src/: main.cc
src/http/: http.cc
src/siegedb/: api.cc  siegedb.cc
